# ccze

./: .gitignore  ChangeLog  ChangeLog-0.2  FAQ  Makefile.in  NEWS  README  Rules.mk.in  THANKS  TODO  ccze.plugins  ccze.spec.in  configure.ac
debian/: changelog  control  copyright  rules
doc/: Makefile.in  ccze-cssdump.1.in  ccze-plugin.7.in  ccze.1  ccze.1.in
etc/: Makefile.in  cczerc
src/: Makefile.in  ccze-apm.c  ccze-color.c  ccze-color.h  ccze-compat.c  ccze-compat.h  ccze-cssdump.c  ccze-dump.c  ccze-exim.c  ccze-exim.h  ccze-fetchmail.c  ccze-httpd.c  ccze-httpd.h  ccze-plugin.c  ccze-plugin.h  ccze-private.h  ccze-procmail.c  ccze-procmail.h  ccze-squid.c  ccze-squid.h  ccze-sulog.c  ccze-sulog.h  ccze-super.c  ccze-super.h  ccze-syslog.c  ccze-syslog.h  ccze-ulogd.c  ccze-vsftpd.c  ccze-vsftpd.h  ccze-wordcolor.c  ccze-wordcolor.h  ccze.c  ccze.h  mod_apm.c  mod_distcc.c  mod_dpkg.c  mod_exim.c  mod_fetchmail.c  mod_httpd.c  mod_icecast.c  (+12 more)
testsuite/: Makefile.in  apm.in  apm.ok  bug-dpkg.in  bug-dpkg.ok  bug-httpd.ok  bug-procmailsubj.ok  bug-procmailsubj.test  color.test  defs  do-test  exim.in  exim.ok  syslog.ok  syslog.test  version.test
